# minikv

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: verify.yml
docs/: architecture.md  demo.md  events.md  format.md  interview-guide.md  performance.md  recovery-support.md  roadmap.md  threat-model.md
docs/adr/: 001-append-only-verified-log.md  002-validated-atomic-compaction.md  003-canonical-backup-restore.md  004-posix-lifetime-lock.md  005-operational-evidence.md  006-reproducible-v1-release.md
docs/releases/: publication-checklist.md  residual-risks.md  v1.0.0.md
evidence/: workload-v1.json
scripts/: __init__.py  demo.py  verify_release.py  workload_evidence.py
src/minikv/: __init__.py  demo.py  errors.py  events.py  evidence.py  release.py  store.py
tests/: __init__.py  test_backup.py  test_compaction.py  test_demo.py  test_events.py  test_evidence.py  test_locking.py  test_release.py  test_store.py
