[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "minikv-store"
version = "1.0.0"
description = "A bounded, crash-aware append-only key-value storage engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Nguyen Gia Phu" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/minikv"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"scripts/demo.py" = ["D100", "D103"]
"scripts/verify_release.py" = ["D100", "D103", "S603"]
"src/minikv/demo.py" = ["C901", "D100", "D103", "EM101", "TRY003"]
"src/minikv/release.py" = [
  "C901",
  "D100",
  "D101",
  "D103",
  "EM101",
  "EM102",
  "PLR2004",
  "TRY003",
]
"tests/**" = [
  "D100",
  "D103",
  "EM101",
  "PLC2701",
  "PLR0913",
  "PLR2004",
  "S101",
  "TC003",
  "TRY003",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
packages = ["minikv"]
mypy_path = "src"
